# SpecialEffectRender

./: .gitignore  CMakeLists.txt  PlyIO.cpp  README.md  cmd.md  main  main.cpp  render.cpp
include/: PLYIO.h  PlyIO.h  YUV_IO.hpp
include/log/: log.cpp  log.h  singleton.h  timestamp.cpp  timstamp.h
include/opengl/: render.h  texture.fs  texture.vs
